add:キャラクター編集ページの実装

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -4,7 +4,7 @@
     <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-14">キャラクターを確認しよう！</h1>
 
     <div class="flex justify-center items-center gap-4 mb-12">
-      <%= link_to "キャラクターを編集する", "#", class: "border border-gray-400 px-6 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
+      <%= link_to "キャラクターを編集する", edit_story_character_path(@story, @character), class: "border border-gray-400 px-6 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
       <%= link_to "キャラクターを削除する", story_character_path(@story, @character), data: { turbo_method: :delete, turbo_confirm: "「#{@character.name}」を完全に削除します。よろしいですか？" }, class: "border border-gray-400 px-8 py-3 rounded-md font-semibold hover:bg-red-500 hover:text-white transition-colors duration-300" %>
     </div>
     
