add:プロットとの連携

--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -89,11 +89,13 @@
                   </div>
                 <% end %>
 
-                <% if false %>
+                <% if plot.characters.any? %>
                   <div>
                     <p class="font-bold mt-6">【キャラクター】</p>
                     <div class="flex flex-wrap gap-2 mt-2 ml-4">
-
+                      <% plot.characters.each do |char| %>
+                        <%= link_to char.name, story_character_path(@story, char), class: "px-3 py-1 text-sm border border-black bg-gray-100 text-black rounded-full hover:bg-gray-300 transition-colors" %>
+                      <% end %>
                     </div>
                   </div>
                 <% end %>
