--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -17,40 +17,42 @@
 
   <div>
     <%= f.label :name, "キャラクター名", class: "block text-lg font-bold" %>
-    <%= f.text_field :name, placeholder: "キャラクター名を記載してください", class: "mt-2 w-full p-2 border border-black rounded" %>
+    <%= f.text_field :name, placeholder: "30文字以内で記入してください。", class: "mt-2 w-full p-2 border border-black rounded" %>
   </div>
   <div>
     <%= f.label :race, "種族", class: "block text-lg font-bold" %>
-    <%= f.text_field :race, placeholder: "キャラクターの種族を記載してください", class: "mt-2 w-full p-2 border border-black rounded" %>
+    <%= f.text_field :race, placeholder: "30文字以内で記入してください。", class: "mt-2 w-full p-2 border border-black rounded" %>
   </div>
   <div>
     <%= f.label :gender, "性別", class: "block text-lg font-bold" %>
-    <%= f.select :gender, Character.genders.keys.map { |k| [I18n.t("enums.character.gender.#{k}"), k] }, { prompt: "キャラクターの性別を選択してください" }, { class: "mt-2 w-full p-2 border border-black rounded" } %>
+    <%= f.select :gender, Character.genders.keys.map { |k| [I18n.t("enums.character.gender.#{k}"), k] }, { prompt: "キャラクターの性別を選択してください。" }, { class: "mt-2 w-full p-2 border border-black rounded" } %>
   </div>
   <div>
     <%= f.label :age, "年齢", class: "block text-lg font-bold" %>
-    <%= f.text_field :age, placeholder: "キャラクターの年齢を記載してください", class: "mt-2 w-full p-2 border border-black rounded" %>
+    <%= f.text_field :age, placeholder: "キャラクターの年齢を記載してください。", class: "mt-2 w-full p-2 border border-black rounded" %>
   </div>
 
   <div>
     <%= f.label :birthplace_world_guide_id, "出身地", class: "block text-lg font-bold" %>
-    <%= f.collection_select :birthplace_world_guide_id, @world_guides, :id, :country_and_region, { prompt: "作成済みのワールドガイドから選択してください" }, { class: "mt-2 w-full p-2 border border-black rounded" } %>
+    <%= f.collection_select :birthplace_world_guide_id, @world_guides, :id, :country_and_region, { prompt: "作成済みのワールドガイドから選択してください。" }, { class: "mt-2 w-full p-2 border border-black rounded" } %>
   </div>
   <div>
     <%= f.label :address_world_guide_id, "現住所", class: "block text-lg font-bold" %>
-    <%= f.collection_select :address_world_guide_id, @world_guides, :id, :country_and_region, { prompt: "作成済みのワールドガイドから選択してください" }, { class: "mt-2 w-full p-2 border border-black rounded" } %>
+    <%= f.collection_select :address_world_guide_id, @world_guides, :id, :country_and_region, { prompt: "作成済みのワールドガイドから選択してください。" }, { class: "mt-2 w-full p-2 border border-black rounded" } %>
   </div>
 
-  <div data-controller="nested-form">
+  <div data-controller="nested-form"
+       data-nested-form-modal-title-value="関連キャラクターの削除"
+       data-nested-form-modal-message-value="この関連キャラクターを削除しますか？">
     <p class="block text-lg font-bold mb-1">関連するキャラクター</p>
     <div class="border rounded-lg p-4 mb-2 space-y-2">
       <select data-nested-form-target="inputType" class="block w-full px-3 py-2 border border-black rounded-md">
-        <option value="">キャラクターを選択してください</option>
+        <option value="">キャラクターを選択してください。</option>
         <% @characters_for_relation.each do |char| %>
           <option value="<%= char.id %>" data-name="<%= char.name %>"><%= char.name %></option>
         <% end %>
       </select>
-      <input type="text" data-nested-form-target="inputExplanation" class="block w-full px-3 py-2 border border-black rounded-md" placeholder="関係性を記入してください（例：友人、ライバル）">
+      <input type="text" data-nested-form-target="inputExplanation" class="block w-full px-3 py-2 border border-black rounded-md" placeholder="関係性を25文字以内で記入してください。（例：友人、男友達で一番仲がいい）" maxlength="25">
       <button type="button" data-action="click->nested-form#add" class="border border-gray-400 w-full py-2 rounded-md font-semibold hover:bg-black hover:text-white transition-colors duration-300">関係性を追加</button>
     </div>
     <div data-nested-form-target="flashContainer" class="mb-4"></div>
@@ -80,16 +82,18 @@
     <div data-nested-form-target="modalPlaceholder"></div>
   </div>
 
-  <div data-controller="nested-form">
+  <div data-controller="nested-form"
+       data-nested-form-modal-title-value="特徴の削除"
+       data-nested-form-modal-message-value="この特徴を削除しますか？">
     <p class="block text-lg font-bold mb-1">特徴</p>
     <div class="border rounded-lg p-4 mb-2 space-y-2">
       <select data-nested-form-target="inputType" class="block w-full px-3 py-2 border border-black rounded-md">
-        <option value="">特徴を選択してください</option>
+        <option value="">特徴を選択してください。</option>
         <% @feature_categories.each do |category| %>
           <option value="<%= category.id %>" data-name="<%= category.name %>"><%= category.name %></option>
         <% end %>
       </select>
-      <input type="text" data-nested-form-target="inputExplanation" class="block w-full px-3 py-2 border border-black rounded-md" placeholder="説明を記入してください">
+      <input type="text" data-nested-form-target="inputExplanation" class="block w-full px-3 py-2 border border-black rounded-md" placeholder="説明を25文字以内で記入してください。" maxlength="25">
       <button type="button" data-action="click->nested-form#add" class="border border-gray-400 w-full py-2 rounded-md font-semibold hover:bg-black hover:text-white transition-colors duration-300">特徴を追加</button>
     </div>
     <div data-nested-form-target="flashContainer" class="mb-4"></div>
