--- a/app/views/flags/show.html.erb
+++ b/app/views/flags/show.html.erb
@@ -4,8 +4,8 @@
     <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-14">フラグを確認しよう！</h1>
 
     <div class="flex justify-center items-center gap-4 mb-12">
-      <%= link_to "フラグを編集する", "#", class: "border border-gray-400 px-6 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
-      <%= link_to "フラグを削除する", "#", data: { turbo_method: :delete, turbo_confirm: "「#{@flag.title}」を完全に削除します。よろしいですか？" }, class: "border border-gray-400 px-8 py-3 rounded-md font-semibold hover:bg-red-500 hover:text-white transition-colors duration-300" %>
+      <%= link_to "フラグを編集する", edit_story_flag_path(@story, @flag), class: "border border-gray-400 px-6 py-3 rounded-md font-semibold hover:bg-gray-100 transition-colors duration-300" %>
+      <%= link_to "フラグを削除する", story_flag_path(@story, @flag), data: { turbo_method: :delete, turbo_confirm: "「#{@flag.title}」を完全に削除します。よろしいですか？" }, class: "border border-gray-400 px-8 py-3 rounded-md font-semibold hover:bg-red-500 hover:text-white transition-colors duration-300" %>
     </div>
     
     <div class="max-w-3xl mx-auto space-y-6 border-2 border-gray-300 p-8 rounded-lg bg-white shadow">
