--- a/app/views/plots/_form.html.erb
+++ b/app/views/plots/_form.html.erb
@@ -31,7 +31,7 @@
     <label class="block text-lg font-bold">ワールドガイド</label>
     <div class="flex items-center gap-2 mt-1">
       <select data-multi-select-target="select" class="flex-grow block px-3 py-2 border border-black rounded-md shadow-sm">
-        <option value="">作成したワールドガイドを選択できます。</option>
+        <option value="">舞台となるワールドガイドを選択</option>
         <% @world_guides.each do |wg| %>
           <option value="<%= wg.id %>" data-name="<%= wg.country_and_region %>"><%= wg.country_and_region %></option>
         <% end %>
@@ -67,7 +67,7 @@
     <label class="block text-lg font-bold">キャラクター</label>
     <div class="flex items-center gap-2 mt-1">
       <select data-multi-select-target="select" class="flex-grow block px-3 py-2 border border-black rounded-md shadow-sm">
-        <option value="">作成したキャラクターを選択できます。</option>
+        <option value="">登場するキャラクターを選択</option>
         <% @characters.each do |char| %>
           <option value="<%= char.id %>" data-name="<%= char.name %>"><%= char.name %></option>
         <% end %>
@@ -97,7 +97,7 @@
     <label class="block text-lg font-bold">フラグ</label>
     <div class="flex items-center gap-2 mt-1">
       <select data-plot-flag-form-target="select" class="flex-grow block px-3 py-2 border border-black rounded-md shadow-sm">
-        <option value="">このプロットで扱うフラグを選択...</option>
+        <option value="">プロットで扱うフラグを選択</option>
         <% @flags_for_select.each do |flag| %>
           <option value="<%= flag.id %>" data-is-created="<%= flag.already_created_in_story? %>">
             <%= flag.title %>
