add-使い方ガイド作成

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="bg-black text-white text-center p-6 w-full">
   <p class="text-sm whitespace-nowrap">
     © <%= Time.now.year %> Historia. All rights reserved. |
-    <%= link_to "プライバシーポリシー", "#", class: "mx-1 underline hover:no-underline" %> |
-    <%= link_to "利用規約", "#", class: "mx-1 underline hover:no-underline" %> |
-    <%= link_to "お問い合わせ", "#", class: "mx-1 underline hover:no-underline" %>
+    <%= link_to "プライバシーポリシー ※準備中", "#", class: "mx-1 underline hover:no-underline" %> |
+    <%= link_to "利用規約 ※準備中", "#", class: "mx-1 underline hover:no-underline" %> |
+    <%= link_to "お問い合わせ ※準備中", "#", class: "mx-1 underline hover:no-underline" %>
   </p>
 </footer>
