--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -33,22 +33,22 @@
 
     <div class="border-2 rounded-lg p-8 border-glay">
       <div class="mb-6">
-        <p class="font-bold text-lg mb-2">【 タイトル 】</p>
+        <p class="font-bold text-lg mb-4">【 タイトル 】</p>
         <p class="text-xl ml-4 break-all"><%= @story.title %></p>
       </div>
 
       <div class="mb-6">
-        <p class="font-bold text-lg mb-2">【 ジャンル 】</p>
+        <p class="font-bold text-lg mb-4">【 ジャンル 】</p>
         <p class="text-xl ml-4"><%= t("activerecord.attributes.story.genres.#{@story.genre}") %></p>
       </div>
 
       <div class="mb-6">
-        <p class="font-bold text-lg mb-2">【 テーマ 】</p>
+        <p class="font-bold text-lg mb-4">【 テーマ 】</p>
         <p class="text-xl ml-4"><%= @story.thema %></p>
       </div>
 
       <div class="mb-6">
-        <p class="font-bold text-lg mb-2">【 あらすじ 】</p>
+        <p class="font-bold text-lg mb-4">【 あらすじ 】</p>
         <div class="text-xl ml-4 mb-20 break-all"><%= simple_format(@story.synopsis) %></div>
       </div>
 
@@ -74,14 +74,14 @@
                 </div>
 
                 <div>
-                  <p class="font-bold mt-8 mb-2">【要約】</p>
+                  <p class="font-bold mt-8 mb-4">【要約】</p>
                   <p class="ml-4 text-gray-700"><%= plot.summary %></p>
                 </div>
 
                 <% if plot.world_guides.any? %>
                   <div>
-                    <p class="font-bold mt-6">【ワールドガイド】</p>
-                    <div class="flex flex-wrap gap-2 mt-2 mb-4 ml-4">
+                    <p class="font-bold mt-6 mb-4">【ワールドガイド】</p>
+                    <div class="flex flex-wrap gap-4 mt-2 mb-4 ml-4">
                       <% plot.world_guides.each do |wg| %>
                         <%= link_to wg.country_and_region, story_world_guide_path(@story, wg), class: "px-3 py-1 text-sm border border-black bg-gray-100 text-black rounded-full hover:bg-gray-300 transition-colors" %>
                       <% end %>
@@ -91,8 +91,8 @@
 
                 <% if plot.characters.any? %>
                   <div>
-                    <p class="font-bold mt-6">【キャラクター】</p>
-                    <div class="flex flex-wrap gap-2 mt-2 ml-4">
+                    <p class="font-bold mt-6 mb-4">【キャラクター】</p>
+                    <div class="flex flex-wrap gap-4 mt-2 ml-4">
                       <% plot.characters.each do |char| %>
                         <%= link_to char.name, story_character_path(@story, char), class: "px-3 py-1 text-sm border border-black bg-gray-100 text-black rounded-full hover:bg-gray-300 transition-colors" %>
                       <% end %>
@@ -102,8 +102,8 @@
 
                 <% if plot.plot_flags.any? %>
                   <div>
-                    <p class="font-bold mt-6">【フラグ】</p>
-                    <div class="flex flex-wrap gap-2 mt-2 ml-4">
+                    <p class="font-bold mt-6 mb-4">【フラグ】</p>
+                    <div class="flex flex-wrap gap-4 mt-2 ml-4">
                       <% plot.plot_flags.each do |plot_flag| %>
                         <% status_class = if plot_flag.check_created && plot_flag.check_recovered
                            "bg-green-100 border border-green-400 text-green-800 hover:bg-green-200"
@@ -122,7 +122,7 @@
                 <% end %>
 
                 <div>
-                  <p class="font-bold mt-8">【構成メモ】</p>
+                  <p class="font-bold mt-8 mb-2">【構成メモ】</p>
                   <div class="ml-4 mt-1 mb-16 text-gray-700 prose max-w-none">
                     <%= simple_format(plot.content) %>
                   </div>
