--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -39,7 +39,7 @@
       </div>
       <div>
         <p class="font-bold">【出身地】</p>
-        <div class="ml-4 mt-2">
+        <div class="ml-4 mt-4 gap-3">
           <% if @character.birthplace_world_guide %>
             <%= link_to @character.birthplace_world_guide.country_and_region, story_world_guide_path(@story, @character.birthplace_world_guide), class: "inline-block px-3 py-1 text-md bg-gray-100 border border-black rounded-full hover:bg-gray-200" %>
           <% else %>
@@ -49,7 +49,7 @@
       </div>
       <div>
         <p class="font-bold">【現住所】</p>
-        <div class="ml-4 mt-2">
+        <div class="ml-4 mt-4 gap-3">
           <% if @character.address_world_guide %>
             <%= link_to @character.address_world_guide.country_and_region, story_world_guide_path(@story, @character.address_world_guide), class: "inline-block px-3 py-1 text-md bg-gray-100 border border-black rounded-full hover:bg-gray-200" %>
           <% else %>
