--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -206,7 +206,7 @@
 
   <div class="action-buttons flex justify-center mt-5 mb-5 space-x-4">
     <%= link_to "お試し作成 ※準備中", "#", class: "px-8 py-3 border-2 border-black text-black bg-white rounded-lg font-bold text-lg hover:bg-gray-100 transition-colors duration-300" %>
-    <%= link_to "/auth/google_oauth2", class: "border-2 border-black px-8 py-3 rounded-md font-bold hover:bg-black hover:text-white transition-colors duration-300 inline-flex items-center" do %>
+    <%= link_to "/auth/google_oauth2", data: { turbo: "false" }, class: "border-2 border-black px-8 py-3 rounded-md font-bold hover:bg-black hover:text-white transition-colors duration-300 inline-flex items-center" do %>
       <svg class="w-5 h-5 mr-3" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
         <path fill="#FFC107" d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"></path>
         <path fill="#FF3D00" d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"></path>
