--- a/app/views/plots/edit.html.erb
+++ b/app/views/plots/edit.html.erb
@@ -1,10 +1,9 @@
 <% breadcrumb :edit_plot, @story, @plot %>
 <div class="px-4 sm:px-6 lg:px-8 py-8">
   <div class="max-w-3xl mx-auto">
-    <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-6">プロットを編集しよう！</h1>
+    <h1 class="text-center text-3xl md:text-4xl font-bold tracking-tight mt-12 mb-6">プロットを編集しよう！</h1>
     <div class="p-8">
       <%= render 'form', story: @story, plot: @plot %>
     </div>
   </div>
 </div>
-
