--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,7 +1,10 @@
-<% breadcrumb :edit_story, @story %>
 <div class="px-4 sm:px-6 lg:px-8 py-8">
-  <h1 class="text-center text-4xl font-bold tracking-tight mt-12 mb-14">ストーリーを編集しよう！</h1>
-    <div class="max-w-3xl mx-auto p-8">
+  <div class="max-w-3xl mx-auto">
+    <% breadcrumb :edit_story, @story %>
+
+    <h1 class="text-center text-3xl md:text-4xl font-bold tracking-tight mt-12 mb-14">ストーリーを編集しよう！</h1>
+
+    <div class="p-8 rounded-lg mb-14">
       <%= render 'form', story: @story %>
     </div>
   </div>
